Changes in 1.8 (??.??.2011)

 - API change: Added write only lock mode for textures. The lock method has changed the signature and uses an enum parameter now instead of a bool. The default is still to lock for read/write (previously 'false'). The old 'true' value should be replaced by ETLM_READ_ONLY.

 - Speedup deleting of particles

 - Add function IParticleSystemSceneNode::clearParticles

 - Add function IGUIEnvironment::removeFont

 - Functions in IMeshCache expecting IAnimatedMesh* parameters removed as similar functions with IMesh* can be used since a while. Fixes also problems when IAnimatedMesh* got upcasted to IMesh*. (thx @ Greenya for reporting)

 - The following functions will now use a "ISceneNode *" instead of a "const ISceneNode *":
   ITriangleSelector::getSceneNodeForTriangle, ISceneNodeAnimatorCollisionResponse::getCollisionNode, ISceneCollisionManager::getCollisionPoint and ISceneCollisionManager::getCollisionResultPosition.
   As collision functions often are followed by changing node positions users where so far forced to using const_casts (found by Greenya).

 - Add vector3d::getAs3Values (patch provided by slavik262)

 - Add function to SViewFrustum to get corners of the near plane (patch provided by Matt Kline, aka slavik262)

 - ParticleFadeOutAffector::setFadeOutTime can no longer be set to invalid values

 - ParticleFadeOutAffector uses now throughout u32 for fadeOutTime (found by greenya)

 - Add missing access function CParticleSystemSceneNode::getAffectors() (seen by B@z)

 - Add missing setters/getters for particle emitters (seen by B@z)

 - Compile-defines can now be disabled from Makefiles/Projectfiles instead of having to change IrrCompileConfig.h each time.

 - IGUITabControl::setActiveTab should only take IGUITab* and not IGUIElement* (thx to greenya for finding)
 
 - Add new skin-colors: EGDC_GRAY_WINDOW_SYMBOL, EGDC_EDITABLE, EGDC_GRAY_EDITABLE, EGDC_FOCUSED_EDITABLE
 
 - Disabled state is now extended to sub-elements
 