@@ -28,6 +28,9 @@ namespace gui
 		//! sets an image
 		virtual void setImage(video::ITexture* image);
 
+		//! Gets the image texture
+		virtual video::ITexture* getImage() const;
+
 		//! sets the color of the image
 		virtual void setColor(video::SColor color);
 
@@ -39,6 +42,9 @@ namespace gui
 
 		//! sets if the image should use its alpha channel to draw itself
 		virtual void setUseAlphaChannel(bool use);
+
+		//! Gets the color of the image
+		virtual video::SColor getColor() const;
 
 		//! Returns true if the image is scaled to fit, false if not
 		virtual bool isImageScaled() const;
